--- a/scripts/SupplementalFigure6.Rmd
+++ b/scripts/SupplementalFigure6.Rmd
@@ -16,13 +16,12 @@ set.seed(7)
 
 ###           input: master 
 ```{r input, echo=FALSE}
-data_dir<-"/Volumes/chant2lab/ChanLab_Common_Drive/Prerana/projects/BMS153/data/"
-master_file<-"PAIRED_MASTER_all_sanquin_peptides_Aug26_NoNA_ccf_newcutoff_clinical.txt"
-#master_file_ndt<-"master_NDT_VMResults_v2_CCFmean_duplicated.txt"
-master_file_ndt<-"master_NDT_VMResults_v2_CCFmean.txt"
+data_dir<-"data/"
+master_file<-"master_maf.txt"
+master_file_ndt<-"master_NDT.txt"
 master<-read.delim(paste0(data_dir,master_file),sep="\t",header=TRUE)
 master_ndt<-read.delim(paste0(data_dir,master_file_ndt),sep="\t",header=TRUE)
-out_dir<-"/Volumes/chant2lab/ChanLab_Common_Drive/Prerana/projects/BMS153/data/plots/SupplementalFigure6/"
+
 ```
 
 ###           input: clinical response data
